WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185590
[EME][GStreamer] The current EME implementation doesn't support the waitingforkey event
https://bugs.webkit.org/show_bug.cgi?id=185590
Summary
[EME][GStreamer] The current EME implementation doesn't support the waitingfo...
Yacine Bandou
Reported
2018-05-13 15:14:22 PDT
We need send the "waitingforkey" event to JS, when the CDM is waiting for a new license or key.
Attachments
Patch
(10.26 KB, patch)
2018-09-17 09:04 PDT
,
Xabier Rodríguez Calvar
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2018-06-24 10:46:46 PDT
Have you started a patch?
Yacine Bandou
Comment 2
2018-06-26 01:38:04 PDT
(In reply to Philippe Normand from
comment #1
)
> Have you started a patch?
For the moment No.
Xabier Rodríguez Calvar
Comment 3
2018-09-17 09:04:31 PDT
Created
attachment 349889
[details]
Patch
WebKit Commit Bot
Comment 4
2018-09-18 02:14:38 PDT
Comment on
attachment 349889
[details]
Patch Clearing flags on attachment: 349889 Committed
r236104
: <
https://trac.webkit.org/changeset/236104
>
WebKit Commit Bot
Comment 5
2018-09-18 02:14:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug